--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "readfile": "^1.0.1",
     "readline": "^1.3.0"
   },
   "devDependencies": {},
